[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
env_logger = "0.11.5"
libc = "0.2.162"
log = "0.4.22"
rand = "0.8.5"
rustix = { version = "0.38.39", features = ["fs", "shm", "mm"] }
tokio = { version = "1.41.1", features = ["full", "signal"] }

utils = { path = "../utils" }
